# nitro-attested-proxy

./: .gitignore  README.md  justfile
client/: biome.json  index.ts  package.json
client/crypto/: index.test.ts  index.ts
client/sdk/: example.ts  index.ts
client/verify/: chain.ts  cose.ts  fixture.cbor  index.test.ts  index.ts  pinned-pcrs.json
enclave/: Cargo.toml  Dockerfile
enclave/src/: attest.rs  echo.rs  hex.rs  keys.rs  main.rs  nsm.rs  send.rs  upstream.rs  wire.rs
infra/: .terraform.lock.hcl  compute.tf  key.tf  network.tf  outputs.tf  user-data.sh  variables.tf
