[package]
name = "enclave"
version = "0.1.0"
edition = "2024"

[dependencies]
vsock = "0.5"
aws-nitro-enclaves-nsm-api = "0.5"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
base64 = "0.22"
hpke = { version = "0.12", default-features = false, features = ["x25519", "std"] }
aes-gcm = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
httparse = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
